Settings menu visible bug fix

--- a/Sass/css/codeStyle.css
+++ b/Sass/css/codeStyle.css
@@ -11,6 +11,7 @@
 
 body {
   display: flex;
+  overflow: hidden;
 }
 
 .wrapper {
